<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ordavo Restaurant</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Account</string>
    <string name="title_dashboard">Current applications</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_cont">Please log in to continue</string>
    <string name="restaurant_name">restaurant name</string>
    <string name="welcome_msg">welcome in</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="order_date">tuesday 2020.9.20</string>
    <string name="order_num_txt">Order number :</string>
    <string name="order_num">50</string>
    <string name="order_price"> EG 99</string>
    <string name="num_items_txt">Number of products:</string>
    <string name="num_items">3</string>
    <string name="show_details">View details</string>
    <string name="cancel_order">Cancel Request</string>
    <string name="accept_order">Confirm Order</string>
    <string name="order_date_txt">order date</string>
    <string name="order_status">Order status</string>
    <string name="new_order">New Order</string>
    <string name="order_items">Products Required</string>
    <string name="product_name">product name</string>
    <string name="product_description">product description</string>
    <string name="quantity">Count :</string>
    <string name="price_txt">price :</string>
    <string name="notes">Note :</string>
    <string name="options">choices :</string>
    <string name="not_found">none</string>
    <string name="additions">additions:</string>
    <string name="payment"> payment </string>
    <string name="payment_method">Payment method</string>
    <string name="paiement_when_recieving">Payment when recieving</string>
    <string name="total">Total</string>
    <string name="please_update_now">Please Update Now !!!</string>
    <string name="status">Status (Not Available)</string>
    <string name="last_orders">Latest order</string>
    <string name="rates">Reviews</string>
    <string name="app_lang">Language</string>
    <string name="Lang">English</string>
    <string name="contact_us">Contact us</string>
    <string name="about_app">About us</string>
    <string name="usage_policy">Usage Policy</string>
    <string name="logout">Logout</string>
    <string name="time_to_delivery">Delivery time</string>
    <string name="notifications">Notifications</string>
    <string name="Account">Profile</string>
    <string name="current_orders"> Current Requests</string>
    <string name="order_details">Order details</string>
    <string name="edit">Edit</string>
    <string name="time">50</string>
    <string name="minute">Min</string>
    <string name="save">Save</string>
    <string name="inProgress">Approved</string>
    <string name="Delivering">out of Delivery</string>
    <string name="Delivered">Delivered</string>
    <string name="selectLang">Selecet Language</string>
    <string name="done">Done</string>
    <string name="default_notification_channel_id">Channel ID</string>

</resources>