<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_margin="10dp"
                android:id="@+id/tv_order_date"
                android:layout_width="wrap_content"
                android:text="@string/order_date"
                app:layout_constraintTop_toTopOf="parent"
                android:alpha=".3"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvt_order_num_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:alpha=".3"
                android:fontFamily="@font/cairo"

                android:text="@string/order_num_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"

                app:layout_constraintEnd_toEndOf="@id/tv_order_date"
                app:layout_constraintTop_toBottomOf="@id/tv_order_date" />

            <TextView
                android:id="@+id/order_num"
                android:text="@string/order_num"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintRight_toLeftOf="@id/tvt_order_num_txt"
                app:layout_constraintTop_toTopOf="@id/tvt_order_num_txt"
                android:alpha=".3"
                android:layout_marginRight="3dp"
                app:layout_constraintBottom_toBottomOf="@id/tvt_order_num_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_order_price"
                android:layout_width="wrap_content"
                android:text="@string/order_price"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:fontFamily="@font/cairo"
                app:layout_constraintTop_toBottomOf="@id/tvt_order_num_txt"
                app:layout_constraintEnd_toEndOf="@id/tvt_order_num_txt"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_items_num_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_items_txt"
                android:fontFamily="@font/cairo"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_order_price"
                app:layout_constraintTop_toBottomOf="@id/tv_order_price"

                />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/tv_order_quantity"
                android:text="@string/num_items"
                android:fontFamily="@font/cairo"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@id/tv_items_num_txt"
                app:layout_constraintTop_toTopOf="@id/tv_items_num_txt"
                android:layout_marginRight="3dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_items_num_txt"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_view_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:clickable="true"
                android:fontFamily="@font/cairo"

                android:text="@string/show_details"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_items_num_txt" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_view_details"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                android:layout_height="1dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/accept_btn_bg"
                android:drawableLeft="@drawable/ic_right"
                android:drawablePadding="3dp"
                android:fontFamily="@font/cairo"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/accept_order"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/cancel_btn_bg"
                android:drawableLeft="@drawable/ic_wrong"
                android:drawablePadding="3dp"
                android:fontFamily="@font/cairo"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/cancel_order"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
