<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".ui.orders.OrderDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tv_order_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/cairo"
                android:text="@string/order_date_txt"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="10dp" />

            <TextView
                android:id="@+id/tv_order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:text="@string/order_date"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="@id/tv_order_date_txt"
                app:layout_constraintStart_toEndOf="@id/tv_order_date_txt"
                app:layout_constraintTop_toTopOf="@id/tv_order_date_txt" />

            <TextView
                android:id="@+id/tvt_order_num_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/cairo"
                android:text="@string/order_num_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="@id/tv_order_date_txt"
                app:layout_constraintTop_toBottomOf="@id/tv_order_date_txt" />

            <TextView
                android:id="@+id/order_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/order_num"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tvt_order_num_txt"
                app:layout_constraintStart_toEndOf="@id/tvt_order_num_txt"
                app:layout_constraintTop_toTopOf="@id/tvt_order_num_txt" />

            <TextView
                android:id="@+id/tv_order_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/cairo"
                android:text="@string/order_price"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvt_order_num_txt"
                app:layout_constraintTop_toBottomOf="@id/tvt_order_num_txt" />

            <TextView
                android:id="@+id/tv_items_num_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/cairo"
                android:text="@string/num_items_txt"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_order_price"
                app:layout_constraintTop_toBottomOf="@id/tv_order_price"

                />

            <TextView
                android:id="@+id/tv_order_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/cairo"
                android:text="@string/num_items"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tv_items_num_txt"
                app:layout_constraintStart_toEndOf="@id/tv_items_num_txt"
                app:layout_constraintTop_toTopOf="@id/tv_items_num_txt" />

            <View
                android:id="@+id/bg_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="#F2F2F8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_items_num_txt" />

            <TextView
                android:id="@+id/txt_order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/cairo"
                android:text="@string/order_status"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/bg_view"
                app:layout_constraintStart_toStartOf="@id/bg_view"
                app:layout_constraintTop_toTopOf="@id/bg_view" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/cancel_btn_bg"
                android:drawableLeft="@drawable/ic_wrong"
                android:drawablePadding="3dp"
                android:fontFamily="@font/cairo"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/cancel_order"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_order_status" />

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/accept_btn_bg"
                android:drawableLeft="@drawable/ic_right"
                android:drawablePadding="3dp"
                android:fontFamily="@font/cairo"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/accept_order"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
                app:layout_constraintStart_toStartOf="@+id/tv_items_num_txt"
                app:layout_constraintTop_toTopOf="@+id/btn_cancel"
                app:layout_constraintVertical_bias="0.545" />

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/order_status_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:fontFamily="@font/cairo"
                android:isScrollContainer="false"
                android:textColor="@color/green"

                android:textStyle="bold"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@+id/btn_accept"
                app:layout_constraintTop_toBottomOf="@+id/btn_accept" />

            <View
                android:id="@+id/bg_view2"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_marginTop="32dp"
                android:background="#F2F2F8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_status_list" />

            <TextView
                android:id="@+id/items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/cairo"
                android:text="@string/order_items"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/bg_view2"
                app:layout_constraintStart_toStartOf="@id/bg_view2"
                app:layout_constraintTop_toTopOf="@id/bg_view2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/order_items_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/bg_view3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bg_view2" />

            <View
                android:id="@+id/bg_view3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"

                android:background="#F2F2F8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_items_recycler" />

            <TextView
                android:id="@+id/payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/cairo"
                android:text="@string/payment"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/bg_view3"
                app:layout_constraintStart_toStartOf="@id/bg_view3"
                app:layout_constraintTop_toTopOf="@id/bg_view3" />

            <TextView
                android:id="@+id/tv_payment_method_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/cairo"
                android:text="@string/payment_method"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_order_date_txt"

                app:layout_constraintTop_toBottomOf="@id/bg_view3" />

            <TextView
                android:id="@+id/paiement_when_recieving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/paiement_when_recieving"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tv_payment_method_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_payment_method_txt" />

            <TextView
                android:id="@+id/tv_total_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairo"
                android:nestedScrollingEnabled="false"
                android:text="@string/total"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_payment_method_txt"
                app:layout_constraintTop_toBottomOf="@id/tv_payment_method_txt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/order_price"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tv_total_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_total_txt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>