<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txt_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/cairo"
            android:text="@string/welcome_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="60dp"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/txt_hello"
            app:layout_constraintRight_toRightOf="@id/txt_hello"
            android:background="@color/colorPrimaryDark"
            android:layout_height="4dp" />

        <TextView
            android:id="@+id/tv_rest_name"
            android:fontFamily="@font/cairo"
            android:text="@string/restaurant_name"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintRight_toLeftOf="@id/txt_hello"
            app:layout_constraintTop_toTopOf="@id/txt_hello"
            app:layout_constraintBottom_toBottomOf="@id/txt_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/cairo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/login_to_cont"
            app:layout_constraintEnd_toEndOf="@+id/txt_hello"
            app:layout_constraintTop_toBottomOf="@+id/txt_hello" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_bg"
            android:fontFamily="@font/cairo"
            android:hint="@string/user_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/txt_hello"
            app:layout_constraintTop_toBottomOf="@id/tv_login" />

        <EditText
            android:id="@+id/et_userPass"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_bg"
            android:fontFamily="@font/cairo"
            android:hint="@string/password"
            android:padding="10dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/et_username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_username"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/login"
            android:fontFamily="@font/cairo"
            android:textStyle="bold"
            android:paddingRight="50dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:paddingLeft="50dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_bg"
            app:layout_constraintTop_toBottomOf="@+id/et_userPass"
            tools:layout_editor_absoluteX="140dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
